force-app/main/default/objects/Commission__c/fields/Amazon_Incentives_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Incentives_Request_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Amazon Incentives Request ID</label>
    <length>19</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>