force-app/main/default/objects/Commission__c/fields/Auto_BillPay__c.field-meta.xml
<CustomField>
    <fullName>Auto_BillPay__c</fullName>
    <formula>Order__r.fw1__Auto_BillPay__c</formula>
    <label>Auto-BillPay</label>
    <type>Checkbox</type>
</CustomField>