force-app/main/default/objects/Commission__c/fields/Claim_Code_Email_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Code_Email_Sent_Date__c</fullName>
    <label>Claim Code Email Sent Date</label>
    <type>DateTime</type>
</CustomField>