force-app/main/default/objects/Commission__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <defaultValue>100</defaultValue>
    <label>Commission Amount</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>