force-app/main/default/objects/Commission__c/fields/Commission_ID_Amb__c.field-meta.xml
<CustomField>
    <fullName>Commission_ID_Amb__c</fullName>
    <description>Ambassadors Commission ID</description>
    <label>Commission ID (Amb)</label>
    <length>7</length>
    <type>Text</type>
</CustomField>