force-app/main/default/objects/Commission__c/fields/Commission_Paid__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid__c</fullName>
    <formula>Order__r.fw1__Account__r.Commission_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Paid</label>
    <type>Checkbox</type>
</CustomField>