force-app/main/default/objects/Commission__c/fields/Date_Amb__c.field-meta.xml
<CustomField>
    <fullName>Date_Amb__c</fullName>
    <description>Original Create Date from Ambassador</description>
    <label>Date (Amb)</label>
    <type>DateTime</type>
</CustomField>