force-app/main/default/objects/Commission__c/fields/Enroll_Date__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Date__c</fullName>
    <formula>Order__r.Enroll_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enroll Date</label>
    <type>Date</type>
</CustomField>