force-app/main/default/objects/Commission__c/fields/Error_Date__c.field-meta.xml
<CustomField>
    <fullName>Error_Date__c</fullName>
    <label>Error Date</label>
    <type>Date</type>
</CustomField>