force-app/main/default/objects/Commission__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <label>Error Message</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>