force-app/main/default/objects/Commission__c/fields/Gift_Card_ID__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_ID__c</fullName>
    <label>Gift Card ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>