force-app/main/default/objects/Commission__c/fields/Number_of_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Referrals__c</fullName>
    <formula>Referrer__r.Count_Commissions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Referrals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>