force-app/main/default/objects/Commission__c/fields/Order_is_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Order_is_Canceled__c</fullName>
    <formula>Order__r.fw1__Is_Voided__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order is Canceled</label>
    <type>Checkbox</type>
</CustomField>