force-app/main/default/objects/Commission__c/fields/Products_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Products_Ordered__c</fullName>
    <formula>Order__r.Number_of_Products_Ordered__c +  Order__r.Count_of_Products_Ordered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Products Ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>