force-app/main/default/objects/Commission__c/fields/Products_Stored__c.field-meta.xml
<CustomField>
    <fullName>Products_Stored__c</fullName>
    <formula>Order__r.Number_of_Products_Stored__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Products Stored</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>