force-app/main/default/objects/Commission__c/fields/Referee_Account__c.field-meta.xml
<CustomField>
    <fullName>Referee_Account__c</fullName>
    <formula>Order__r.fw1__Account_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referee Account</label>
    <type>Text</type>
</CustomField>