force-app/main/default/objects/Commission__c/fields/Referee_Name__c.field-meta.xml
<CustomField>
    <fullName>Referee_Name__c</fullName>
    <formula>Order__r.Mother_s_First_Name_LU__c &amp;&quot; &quot;&amp; Order__r.Mother_s_Last_Name_LU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referee Name</label>
    <type>Text</type>
</CustomField>