force-app/main/default/objects/Commission__c/fields/Referrer_Account__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Account__c</fullName>
    <formula>Referrer__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referrer Account</label>
    <type>Text</type>
</CustomField>