force-app/main/default/objects/Commission__c/validationRules/Missing_email_address.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_email_address</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISBLANK( Email__c ),
 TEXT(Status__c) = &quot;Stored&quot;)</errorConditionFormula>
    <errorMessage>There is no email address for referrer.</errorMessage>
</ValidationRule>