force-app/main/default/objects/Commission__c/validationRules/Stored_when_Account_is_already_Paid.validationRule-meta.xml
<ValidationRule>
    <fullName>Stored_when_Account_is_already_Paid</fullName>
    <active>true</active>
    <description>Can&apos;t select Stored when Account is already Paid.</description>
    <errorConditionFormula>AND( Commission_Paid__c = true,
 ISPICKVAL(Status__c, &quot;Stored&quot;))</errorConditionFormula>
    <errorMessage>This account already has a Paid commission.</errorMessage>
</ValidationRule>