force-app/main/default/objects/Commission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Claim_Code_Email_Sent_Date__c</columns>
    <columns>NAME</columns>
    <columns>Referrer__c</columns>
    <columns>Referee_Name__c</columns>
    <columns>Order__c</columns>
    <columns>Products_Ordered__c</columns>
    <columns>Products_Stored__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Commission_ID_Amb__c</columns>
    <columns>Date_Amb__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>