force-app/main/default/objects/Commission__c/listViews/CS_Canceled.listView-meta.xml
<ListView>
    <fullName>CS_Canceled</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Canceled</value>
    </filters>
    <label>5. CS - Canceled</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>