force-app/main/default/objects/Commission__c/listViews/CS_Enrolled.listView-meta.xml
<ListView>
    <fullName>CS_Enrolled</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Order_is_Canceled__c</columns>
    <columns>NAME</columns>
    <columns>Order__c</columns>
    <columns>Products_Stored__c</columns>
    <columns>Auto_BillPay__c</columns>
    <columns>Referrer_Account__c</columns>
    <columns>Referrer__c</columns>
    <columns>Referee_Account__c</columns>
    <columns>Referee_Name__c</columns>
    <columns>Total_Paid_Amount__c</columns>
    <columns>Balance_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Enrolled</value>
    </filters>
    <filters>
        <field>Order_is_Canceled__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Auto_BillPay__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>1. CS - Enrolled</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>