force-app/main/default/objects/Commission__c/listViews/CS_Error.listView-meta.xml
<ListView>
    <fullName>CS_Error</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>6. CS - Error</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>