force-app/main/default/objects/Commission__c/listViews/CS_Stored.listView-meta.xml
<ListView>
    <fullName>CS_Stored</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Referrer_Account__c</columns>
    <columns>Referrer__c</columns>
    <columns>Commission_Paid__c</columns>
    <columns>Referee_Account__c</columns>
    <columns>Referee_Name__c</columns>
    <columns>Order__c</columns>
    <columns>Enroll_Date__c</columns>
    <columns>Products_Stored__c</columns>
    <columns>Auto_BillPay__c</columns>
    <columns>Balance_Due__c</columns>
    <columns>Total_Paid_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Stored</value>
    </filters>
    <label>3. CS - Stored</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>