force-app/main/default/objects/Commission__c/listViews/Gift_Cards_Yesterday.listView-meta.xml
<ListView>
    <fullName>Gift_Cards_Yesterday</fullName>
    <columns>NAME</columns>
    <columns>Claim_Code_Email_Sent_Date__c</columns>
    <columns>Claim_Date__c</columns>
    <columns>Commission_Amount__c</columns>
    <columns>Commission_Paid__c</columns>
    <columns>Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Claim_Code_Email_Sent_Date__c</field>
        <operation>equals</operation>
        <value>1/16/2020 12:00 AM</value>
    </filters>
    <label>Gift Cards Yesterday</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>